# image-loader

./: .gitignore  README.md  main.cc
src/: CMakeLists.txt  main.cc
src/include/: image.h  kt_image.h  tools.h
